# classmanager

./: manage.py  pyproject.toml
classmanager/: asgi.py  settings.py  urls.py  wsgi.py
distribution/: admin.py  controller.py  models.py  permissions.py  serializers.py  urls.py  views.py
distribution/migrations/: 0001_initial.py
